--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   file_picker: ^5.2.6
   screenshot: ^1.3.0
   path_provider: ^2.0.13
+  flutter_signin_button: ^2.0.0
   #google_sign_in: ^6.0.2
   #firebase_ui_oauth_google: ^1.0.22
   #flutter_map: ^3.1.0
