--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.3.0
   provider: ^6.0.4
   firebase_ui_auth: ^1.1.0
+  firebase_ui_database: ^1.0.0
   location: ^4.4.0
   geocode: ^1.0.2
   geolocator: ^9.0.2
@@ -60,7 +61,7 @@ dependencies:
   mapbox_gl: ^0.16.0
   audioplayers: ^3.0.1
   go_router: ^6.2.0
-  flutterfire_ui: ^0.4.3+20
+  #flutterfire_ui: ^0.4.3+20
   google_sign_in: ^5.4.4
   google_mobile_ads: ^2.3.0
   flutter_share: ^2.0.0
@@ -68,6 +69,9 @@ dependencies:
   screenshot: ^1.3.0
   path_provider: ^2.0.13
   flutter_signin_button: ^2.0.0
+  firebase_ui_oauth: ^1.1.17
+  firebase_ui_oauth_google: ^1.0.21
+  firebase_ui_oauth_facebook: ^1.0.24
   #google_sign_in: ^6.0.2
   #firebase_ui_oauth_google: ^1.0.22
   #flutter_map: ^3.1.0
@@ -137,3 +141,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+fonts:
+  - family: SocialIcons
+    fonts:
+      - asset: packages/firebase_ui_auth/fonts/SocialIcons.ttf
