--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 .build/
+.ios/
+.ios/Runner\ 2023-04-16\ 10-29-48/gtk_flutter.ipa
 
 # Symbolication related
 app.*.symbols
