--- a/ios/Runner/GoogleService-Info-tripify-first.plist
+++ b/ios/Runner/GoogleService-Info-tripify-first.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>90817750920-3ubjl4m7v1f33uq5jmjsdc024le4sj1s.apps.googleusercontent.com</string>
+	<string>90817750920-9307of40hl4eg62dabtvcd403s6pg5a8.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.90817750920-3ubjl4m7v1f33uq5jmjsdc024le4sj1s</string>
+	<string>com.googleusercontent.apps.90817750920-9307of40hl4eg62dabtvcd403s6pg5a8</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBvRKU3On_YiZ7b4t3VGJq4zgbXZ2Uxa8A</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.tripify.178</string>
+	<string>com.tripify.tripify-first</string>
 	<key>PROJECT_ID</key>
 	<string>tripify-first</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:90817750920:ios:498361c669da933cdd7c3d</string>
-	<key>DATABASE_URL</key>
-	<string>https://tripify-first-default-rtdb.asia-southeast1.firebasedatabase.app</string>
+	<string>1:90817750920:ios:37a397a09ebef728dd7c3d</string>
 </dict>
 </plist>
