--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,6 +116,7 @@ flutter:
     - assets/
     - assets/Quokka-PNG-Pic.png
     - assets/newcountry.wav
+    - assets/quokka1.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
