--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,19 +37,30 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
-  cloud_firestore: ^4.1.0
-  firebase_auth: ^4.1.4
-  firebase_core: ^2.3.0
   provider: ^6.0.4
+
+  #cloud_firestore: ^4.1.0
+  firebase_auth: ^4.1.4
+ # firebase_core: ^2.3.0
+ # firebase_core: ^2.3.0
   firebase_ui_auth: ^1.1.0
-  firebase_ui_database: ^1.0.0
+  #firebase_ui_database: ^1.0.0
+  #firebase_ui_database: ^1.0.0
+  cloud_firestore_odm: ^1.0.0-dev.45
+  firebase_ui_oauth: ^1.1.17
+  firebase_ui_oauth_google: ^1.0.21
+  firebase_ui_oauth_facebook: ^1.0.24
+  #firebase_storage: ^11.2.5
+
+  #flutterfire_ui: ^0.4.3+20
+  #firebase_ui_oauth_google: ^1.0.22
+
   location: ^4.4.0
   geocode: ^1.0.2
   geolocator: ^9.0.2
   lottie: ^2.0.0
   confetti: ^0.7.0
   intl: ^0.17.0
-  cloud_firestore_odm: ^1.0.0-dev.45
   json_annotation: ^4.7.0
   #flutter_map: ^3.1.0
   syncfusion_flutter_maps: ^20.4.43
@@ -61,7 +72,6 @@ dependencies:
   mapbox_gl: ^0.16.0
   audioplayers: ^3.0.1
   go_router: ^6.2.0
-  #flutterfire_ui: ^0.4.3+20
   google_sign_in: ^5.4.4
   google_mobile_ads: ^2.3.0
   flutter_share: ^2.0.0
@@ -69,17 +79,17 @@ dependencies:
   screenshot: ^1.3.0
   path_provider: ^2.0.13
   flutter_signin_button: ^2.0.0
-  firebase_ui_oauth: ^1.1.17
-  firebase_ui_oauth_google: ^1.0.21
-  firebase_ui_oauth_facebook: ^1.0.24
+
   package_info: ^2.0.2
   package_info_plus: ^3.1.2
   image_picker: ^0.8.7+5
   photo_view: ^0.14.0
   cached_network_image: ^3.2.3
   permission_handler: ^10.4.3
+  firebase_core: ^2.15.0
+  firebase_ui_database: ^1.3.4
+  cloud_firestore: ^4.8.4
   #google_sign_in: ^6.0.2
-  #firebase_ui_oauth_google: ^1.0.22
   #flutter_map: ^3.1.0
   #mapbox_gl: ^0.16.0
   
