--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -111,6 +111,11 @@
 		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+<array>
+    <string>com.tripify.tripify-first.backgroundTaskIdentifier</string>
+</array>
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
