--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   firebase_ui_auth: ^1.1.0
   #firebase_ui_database: ^1.0.0
   #firebase_ui_database: ^1.0.0
-  cloud_firestore_odm: ^1.0.0-dev.45
+  cloud_firestore_odm: ^1.0.0-dev.64
   firebase_ui_oauth: ^1.1.17
   firebase_ui_oauth_google: ^1.0.21
   firebase_ui_oauth_facebook: ^1.0.24
@@ -61,7 +61,7 @@ dependencies:
   lottie: ^2.0.0
   confetti: ^0.7.0
   intl: ^0.17.0
-  json_annotation: ^4.7.0
+  json_annotation: ^4.8.1
   #flutter_map: ^3.1.0
   syncfusion_flutter_maps: ^20.4.43
   http: ^0.13.5
@@ -89,6 +89,7 @@ dependencies:
   firebase_core: ^2.15.0
   firebase_ui_database: ^1.3.4
   cloud_firestore: ^4.8.4
+  firebase_storage: ^11.2.5
   #google_sign_in: ^6.0.2
   #flutter_map: ^3.1.0
   #mapbox_gl: ^0.16.0
@@ -108,8 +109,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
-  cloud_firestore_odm_generator: ^1.0.0-dev.45
-  json_serializable: ^6.5.4
+  cloud_firestore_odm_generator: ^1.0.0-dev.58
+  json_serializable: ^6.6.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
