--- a/pubspec copy.yaml
+++ b/pubspec copy.yaml
@@ -20,7 +20,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  #sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.18.5 <4.0.0'
+  flutter: '>=3.3.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,47 +38,64 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^5.1.0
-  cloud_firestore: ^4.1.0
-  firebase_auth: ^4.1.4
-  firebase_core: ^2.3.0
+  google_fonts: ^4.0.4
   provider: ^6.0.4
+
+  #cloud_firestore: ^4.1.0
+  firebase_auth: ^4.1.4
+ # firebase_core: ^2.3.0
+ # firebase_core: ^2.3.0
   firebase_ui_auth: ^1.1.0
-  location: ^5.0.3
+  #firebase_ui_database: ^1.0.0
+  #firebase_ui_database: ^1.0.0
+  #firebase_ui_database: ^1.3.4
+  firebase_ui_database: ^1.2.0
+  firebase_ui_localizations: ^1.4.0
+  cloud_firestore_odm: ^1.0.0-dev.64
+  firebase_ui_oauth: ^1.1.17
+  firebase_ui_oauth_google: ^1.0.21
+  firebase_ui_oauth_facebook: ^1.0.24
+  #firebase_storage: ^11.2.5
+
+  #flutterfire_ui: ^0.4.3+20
+  #firebase_ui_oauth_google: ^1.0.22
+
+  location: ^4.4.0
   geocode: ^1.0.2
   geolocator: ^9.0.2
   lottie: ^2.0.0
   confetti: ^0.7.0
   intl: ^0.18.0
-  cloud_firestore_odm: ^1.0.0-dev.45
-  json_annotation: ^4.7.0
+  json_annotation: ^4.8.1
   #flutter_map: ^3.1.0
-  syncfusion_flutter_maps: ^22.2.8
-  http: ^1.1.0
-  dio: ^5.3.2
-  share_plus: ^7.1.0
+  syncfusion_flutter_maps: ^20.4.43
+  http: ^0.13.5
+  dio: ^4.0.6
+  share_plus: ^6.3.0
   shared_preferences: ^2.0.17
   salomon_bottom_bar: ^3.3.1
   mapbox_gl: ^0.16.0
-  audioplayers: ^5.1.0
-  #go_router: ^10.0.0
+  audioplayers: ^3.0.1
   go_router: ^6.2.0
-  flutterfire_ui: ^0.4.3+20
   google_sign_in: ^5.4.4
-  google_mobile_ads: ^3.0.0
+  google_mobile_ads: ^2.3.0
   flutter_share: ^2.0.0
   file_picker: ^5.2.6
   screenshot: ^2.1.0
   path_provider: ^2.0.13
   flutter_signin_button: ^2.0.0
-  firebase_ui_oauth_google: ^1.0.21
-  firebase_ui_oauth_facebook: ^1.2.0
-  image_picker: ^1.0.2
-  firebase_storage: ^11.2.5
-  package_info_plus: ^4.1.0
+
+  package_info: ^2.0.2
+  package_info_plus: ^3.1.2
+  image_picker: ^0.8.7+5
   photo_view: ^0.14.0
+  cached_network_image: ^3.2.3
+  permission_handler: ^10.4.3
+  firebase_core: ^2.15.0
+  #cloud_firestore: ^4.8.4
+  cloud_firestore: ^4.1.0
+  firebase_storage: ^11.2.5
   #google_sign_in: ^6.0.2
-  #firebase_ui_oauth_google: ^1.0.22
   #flutter_map: ^3.1.0
   #mapbox_gl: ^0.16.0
   
@@ -95,13 +114,14 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
-  cloud_firestore_odm_generator: ^1.0.0-dev.45
-  json_serializable: ^6.5.4
+  cloud_firestore_odm_generator: ^1.0.0-dev.58
+  json_serializable: ^6.6.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -113,6 +133,7 @@ flutter:
     - assets/
     - assets/Quokka-PNG-Pic.png
     - assets/newcountry.wav
+    - assets/quokka1.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -144,3 +165,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+fonts:
+  - family: SocialIcons
+    fonts:
+      - asset: packages/firebase_ui_auth/fonts/SocialIcons.ttf
