--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>API_KEY</key>
 	<string>AIzaSyBvRKU3On_YiZ7b4t3VGJq4zgbXZ2Uxa8A</string>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.tripify.tripify-first.backgroundTaskIdentifier</string>
+	</array>
 	<key>BUNDLE_ID</key>
 	<string>com.tripify.tripify-first</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
@@ -80,13 +84,13 @@
 	<array>
 		<string>_dartobservatory._tcp</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Sharing of location details via social media requires access to your photos. </string>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>Your location is required in order to record your travel details including countries you have visted.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your location is required in order to record your travel details including countries you have visted.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Sharing of location details via social media requires access to your photos. </string>
-	<key>NSCameraUsageDescription</key>
 	<string>Sharing of location details via social media requires access to your photos. </string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
@@ -106,16 +110,7 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>processing</string>
-		<string>remote-notification</string>
-	</array>
-	<key>BGTaskSchedulerPermittedIdentifiers</key>
-<array>
-    <string>com.tripify.tripify-first.backgroundTaskIdentifier</string>
-</array>
-
+	<array/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
