--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   package_info_plus: ^4.1.0
   photo_view: ^0.14.0
   native_exif: ^0.5.0
+  flutter_image_compress: ^2.0.4
   #google_sign_in: ^6.0.2
   #firebase_ui_oauth_google: ^1.0.22
   #flutter_map: ^3.1.0
