--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ dependencies:
   photo_view: ^0.14.0
   native_exif: ^0.5.0
   flutter_image_compress: ^2.0.4
+  image_cropper: ^5.0.0
+  dotted_border: ^2.0.0+3
   #google_sign_in: ^6.0.2
   #firebase_ui_oauth_google: ^1.0.22
   #flutter_map: ^3.1.0
